--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
+    "vuedraggable": "^2.24.1",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
